--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChatDB - AI Query Generator</title>
+    <title>SearchDB - AI Query Generator</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body class="container mt-5">
-<h2 class="text-center">ChatDB - AI Query Generator</h2>
+<h2 class="text-center">SearchDB - AI Query Generator</h2>
 
 <!-- Database Selection -->
 <div class="input-group mb-3">
